crucible-syntax/test-data/simulator-tests/calls.out.good
==== Begin Simulation ====
cx@0:i
intSum cx@0:i 42

==== Finish Simulation ====
==== Proof obligations ====

Prove:
  test-data/simulator-tests/calls.cbl:7:5: error: in main
  bogus
  false
COUNTEREXAMPLE
